@@ -5,8 +5,8 @@ import com.urise.webapp.model.Resume;
 
 import java.util.*;
 
-public abstract class AbstractArrayStorage extends AbstractStorage {
-    protected static final int STORAGE_LIMIT = 10;  //  temp
+public abstract class AbstractArrayStorage extends AbstractStorage<Integer> {
+    protected static final int STORAGE_LIMIT = 10000;
     protected Resume[] storage = new Resume[STORAGE_LIMIT];
     protected int size = 0;
 
@@ -21,13 +21,6 @@ public abstract class AbstractArrayStorage extends AbstractStorage {
         size = 0;
     }
 
-//    @Override
-//    public List<Resume> getAllSorted() {
-//        List<Resume> sortedResume = new ArrayList<>(List.of(Arrays.copyOf(storage, size)));
-//        sortedResume.sort(RESUME_COMPARATOR);
-//        return sortedResume;
-//    }
-
     @Override
     public String toString() {
         return "AbstractArrayStorage{" + "storage=" + Arrays.toString(storage) + '}';
@@ -37,40 +30,37 @@ public abstract class AbstractArrayStorage extends AbstractStorage {
 
     protected abstract void fillDeletedElement(int index);
 
-    protected boolean isExist(Object searchKey) {
+    protected boolean isExist(Integer searchKey) {
         return (int) searchKey >= 0;
     }
 
     @Override
-    protected Resume doGet(Object searchKey) {
-        int index = (int) searchKey;
-        return storage[index];
+    protected Resume doGet(Integer searchKey) {
+        return storage[searchKey];
     }
 
-    protected void doSave(Resume r, Object searchKey) {
-        int index = (int) searchKey;
+    protected void doSave(Resume r, Integer searchKey) {
         if (size == STORAGE_LIMIT) {
             throw new StorageException("Storage overflow", r.getUuid());
         } else {
-            insertElement(r, index);
+            insertElement(r, searchKey);
             size++;
         }
     }
 
     @Override
-    protected void doDelete(Object searchKey) {
-        int index = (int) searchKey;
-        fillDeletedElement(index);
+    protected void doDelete(Integer searchKey) {
+        fillDeletedElement(searchKey);
         storage[size - 1] = null;
         size--;
     }
 
-    protected void doUpdate(Resume r, Object searchKey) {
+    protected void doUpdate(Resume r, Integer searchKey) {
         storage[(int) searchKey] = r;
     }
 
     @Override
     protected List<Resume> doCopyAll() {
-        return List.of(Arrays.copyOf(storage, size));
+        return Arrays.asList(storage).subList(0, size);
     }
 }
